# sentinel

./: AGENTS_ROADMAP.md  CHANGELOG.md  Cargo.toml  Dockerfile  MANIFESTO.md  README.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  install.sh  mise.toml
.claude/: AGENTS_ROADMAP.md  AGENT_PROTOCOL_2.0.md  CLAUDE.md  FEATURE_RECOMMENDATIONS.md  PINGORA_INTEGRATION.md  ROADMAP-PLAYGROUND.md  ROADMAP.md  TEST_RESULTS_INLINE_OPENAPI.md  WASM_ROADMAP.md
.claude/rules/: patterns.md  project.md  rust-standards.md  workflow.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/static/: _config.yml
.github/workflows/: _build.yml  _docker.yml  ci.yml  docs-manual.yml  docs.yml  release.yml
.mise/tasks/: book-build  book-clean  book-deploy  book-install  book-new-page  book-serve  book-stats  book-test  book-watch
agents/data-masking/: Cargo.toml  sentinel-agent.toml
agents/data-masking/src/: buffer.rs  config.rs  errors.rs  handler.rs  lib.rs  main.rs
agents/echo/: Cargo.toml
agents/echo/src/: main.rs
agents/waf/: Cargo.toml  build.rs
agents/wasm-allowlist/: Cargo.toml
agents/wasm-allowlist/src/: lib.rs
book/: .gitignore  README.md  book.toml
book/book/: introduction.html  print.html
book/book/advanced/: 0-rtt.html  caching-strategies.html  circuit-breakers.html  connections.html  custom-handlers.html  extensions.html  failover.html  high-availability.html  http3-migration.html  http3.html  memory.html  middleware.html  performance.html  plugins.html  quic.html  retry.html
book/book/appendix/: changelog.html  faq.html  glossary.html  license.html
book/book/concepts/: architecture.html  components.html  path-variables.html  pingora.html  request-flow.html  route-matching.html  route-priority.html  routing.html
book/book/configuration/: advanced-routing.html  basic-routes.html  connection-pools.html  health-checks.html  kdl-format.html  listeners.html  load-balancing.html  overview.html  performance.html  route-groups.html  routes.html  (+3 more)
book/src/: introduction.md
book/theme/: index.hbs
config/: sentinel.kdl
config/docker/: default.kdl  proxy.kdl
config/example-multi-file/: sentinel.kdl
config/examples/: ai-guardrails.kdl  api-schema-validation.kdl  basic.kdl  distributed-rate-limit.kdl  http-caching.kdl  inference-routing.kdl  namespaces.kdl  shadow-traffic.kdl
config/grafana/: sentinel-dashboard.json
config/waf/: waf.yaml
crates/agent-protocol/: Cargo.toml  build.rs
crates/common/: Cargo.toml  README.md
crates/config/: Cargo.toml
crates/config/src/: agents.rs  defaults.rs  filters.rs  flatten.rs  lib.rs  namespace.rs  observability.rs  resolution.rs  routes.rs  server.rs  validation.rs
crates/config/src/kdl/: filters.rs  mod.rs  routes.rs  server.rs  upstreams.rs
crates/config/src/multi_file/: parsers.rs
crates/config/src/validate/: agents.rs  certs.rs  lint.rs  mod.rs  network.rs
crates/playground-wasm/: Cargo.toml  test.html
crates/playground-wasm/src/: lib.rs
crates/proxy/: Cargo.toml
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  matcher.rs  trace.rs  types.rs  upstream.rs
crates/stack/: README.md
crates/wasm-runtime/: Cargo.toml
deploy/: sentinel-waf.service
docs/: HTTP3.md  INTEGRATION_STATUS.md
examples/: config_with_service_types.kdl  http3_config.kdl  working_service_types.kdl
tests/: Makefile  README.md  bundle_integration_test.sh  test-config.kdl  test-inline-openapi.kdl  test_inline_openapi.sh  test_waf.sh
tests/chaos/: chaos-config.kdl  docker-compose.chaos.yml  nginx.conf  run-chaos-test.sh
tests/fixtures/: mock-backend.py  waf-config-block-test.kdl
tests/scenarios/: test_tls_cert_rotation.sh
tests/soak/: README.md  analyze-results.py  run-soak-test.sh  soak-config.kdl
(+242 files in other folders)
