[package]
name = "sentinel-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Configuration loading and validation for Sentinel reverse proxy"
keywords = ["proxy", "reverse-proxy", "configuration", "kdl", "toml"]
categories = ["config", "network-programming"]

[dependencies]
# Local crates
sentinel-common = { path = "../common", version = "0.2.3" }

# Configuration formats
kdl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Validation
validator = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true, optional = true }
pem = { version = "3.0", optional = true }
x509-parser = { version = "0.16", optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# File globbing
glob = "0.3"

# File watching for hot reload
notify = "6.1"

# Path handling
directories = "5.0"

# Environment variables
envy = "0.4"

# Schema validation
jsonschema = "0.18"

# Utilities
once_cell = "1.20"
parking_lot = { workspace = true }
arc-swap = { workspace = true }

[features]
default = ["validation"]
validation = ["tokio", "pem", "x509-parser"]

[dev-dependencies]
tempfile = "3.12"
insta = { workspace = true }
proptest = { workspace = true }
